# SNAKE

./: .gitignore  CMakeLists.txt  GameManager.cpp  GameManager.h  GameMenager.cpp  GameMenager.h  MSBoardTextView.cpp  MSBoardTextView.h  MSSFMLView.cpp  MSSFMLView.h  MSTextController.cpp  MSTextController.h  MenuController.cpp  MenuController.h  MenuView.cpp  MenuView.h  MinesweaperBoard.cpp  MinesweaperBoard.h  MinesweeperController.cpp  MinesweeperController.h  ScoreController.cpp  ScoreController.h  ScoreView.cpp  ScoreView.h  ScoreViewController.cpp  ScoreViewController.h  SnakeBoard.cpp  SnakeBoard.h  SnakeBoardView.cpp  SnakeBoardView.h  SnakeController.cpp  SnakeController.h  StartScreen.cpp  StartScreen.h  StartScreenController.cpp  StartScreenController.h  filetypes.xml  github.xml  local_history.patch  main.cpp  (+3 more)
_windows/: cpp.toolchains.xml
